--- a/BookSpace/src/main/resources/templates/add-book-form.html
+++ b/BookSpace/src/main/resources/templates/add-book-form.html
@@ -22,10 +22,10 @@
         <!--    <label th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Error</label>-->
         <input type="number" th:field="*{year}" placeholder="Apparition year" class="form-control mb-4 col-4">
 
-        <div  >
-            <textarea class="form-control mb-4 col-4" th:field="*{details.description}" placeholder="Description" />
-        </div>
-        <input th:field="*{details.id}" type="hidden"/>
+<!--        <div  >-->
+<!--            <textarea class="form-control mb-4 col-4" th:field="*{details.description}" placeholder="Description" />-->
+<!--        </div>-->
+<!--        <input th:field="*{details.id}" type="hidden"/>-->
 
         <select th:field="*{author}" class="form-control mb-4 col-4" >
             <option value="">Select the author</option>
