--- a/BookSpace/src/main/resources/templates/authors.html
+++ b/BookSpace/src/main/resources/templates/authors.html
@@ -45,6 +45,9 @@
               class="btn btn-primary">Update</a>
         <a th:href="@{/authors/deleteAuthor/{id}(id=${author.id})}"
            class="btn btn-danger">Delete</a>
+
+        <a th:href="@{/authors/page/{id}(id=${author.id})}"
+           class="btn btn-info">Info</a>
       </td>
     </tr>
     </tbody>
