--- a/BookSpace/src/main/resources/templates/add-author-form.html
+++ b/BookSpace/src/main/resources/templates/add-author-form.html
@@ -20,7 +20,7 @@
 
 <!--    <label th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Error</label>-->
     <input type="number" th:field="*{age}" placeholder="Age" class="form-control mb-4 col-4">
-<!--    <input type="text" th:field="*{authorDetails.description}" placeholder="Description" class="form-control mb-4 col-4">-->
+    <input type="text" th:field="*{authorDetails.description}" placeholder="Description" class="form-control mb-4 col-4">
 
 
     <button type="submit" class="btn btn-info col-2">Save
