--- a/BookSpace/src/main/resources/templates/author-info.html
+++ b/BookSpace/src/main/resources/templates/author-info.html
@@ -8,8 +8,22 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
-<div class="container">
+<div class="container my-2" align="center">
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{'/authors'}">Authors <span class="sr-only" >(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{'/books'}">Books <span class="sr-only" >(current)</span></a>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
 
 <!--    <form action="#" th:action="@{/authors/save}" th:object="${author}"-->
 <!--          method="POST">-->
@@ -35,13 +49,13 @@
 
 
 
-    <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
+    <div class="card text-white bg-info mb-3" style="max-width: 100rem;">
         <div class="card-header" th:text="'First Name: ' + ${author.firstName}">Header</div>
         <div class="card-header" th:text="'Last Name: ' + ${author.lastName}">Header</div>
         <div class="card-header" th:text="'Age: ' + ${author.age}">Header</div>
 
         <div class="card-body">
-            <h5 class="card-title">Author Description</h5>
+            <h5 class="card-title">Author Description: </h5>
             <p> <span th:text="${author.authorDetails.description}"></span></p>
         </div>
     </div>
