Centered cards and forms

--- a/BookSpace/src/main/resources/templates/add-author-form.html
+++ b/BookSpace/src/main/resources/templates/add-author-form.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
 </head>
 <body>
-<div class="container mx-auto">
+<div class="container my-2" align="center">
   <hr>
   <h2>Add a new Author</h2>
 
