--- a/BookSpace/src/main/resources/templates/add-quote-form.html
+++ b/BookSpace/src/main/resources/templates/add-quote-form.html
@@ -9,7 +9,7 @@
           crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
+<div class="container my-2" align="center">
     <h1>Quotes</h1>
     <hr>
     <h2>Save Quote</h2>
