--- a/BookSpace/src/main/resources/templates/update-author-form.html
+++ b/BookSpace/src/main/resources/templates/update-author-form.html
@@ -8,7 +8,7 @@
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
-<div class="container">
+<div class="container my-2" align="center">
   <h1>Authors Management System</h1>
   <hr>
   <h2>Update Author</h2>
