--- a/BookSpace/src/main/resources/templates/labels.html
+++ b/BookSpace/src/main/resources/templates/labels.html
@@ -13,8 +13,8 @@
   <script src="/webjars/font-awesome/6.2.0/js/all.min.js"></script>
 </head>
 <body>
-<div class="container my-2">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="container my-2 text-center">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-center">
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -29,32 +29,20 @@
 
   <h3>Book Labels List</h3>
 
-  <table style="width:80%" border="1" class="table table-striped table-responsive-md">
-    <thead>
-    <tr>
-      <!-- Po?i ad?uga aici capetele de tabel dac? sunt necesare -->
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="label:${labelList}">
-      <td th:text="${label.text}"></td>
-      <td>
-        <a th:href="@{/labels/update-label-form/{id}(id=${label.id})}" class="btn btn-primary">Update</a>
-        <a th:href="@{/labels/deleteLabel/{id}(id=${label.id})}" class="btn btn-danger">Delete</a>
-      </td>
-    </tr>
-    </tbody>
-  </table>
-
-  <div class="row">
+  <div class="row justify-content-center">
     <div class="col-md-4 mb-3" th:each="label:${labelList}">
-        <div th:class="'card text-white ' + ${label.colour} + ' mb-3'" style="max-width: 18rem;">
-        <div class="card-header">
-
-        </div>
+      <div th:class="'card text-white ' + ${label.colour} + ' mb-3'" style="max-width: 18rem;">
+        <div class="card-header"></div>
         <div class="card-body">
           <h5 class="card-title" th:text="${label.text}">Primary card title</h5>
-
+        </div>
+        <div class="card-footer text-muted">
+          <a th:href="@{/labels/update-label-form/{id}(id=${label.id})}" class="btn btn-outline-light">
+            <i class="fas fa-edit"></i> Update
+          </a>
+          <a th:href="@{/labels/deleteLabel/{id}(id=${label.id})}" class="btn btn-outline-light">
+            <i class="fas fa-trash-alt"></i> Delete
+          </a>
         </div>
       </div>
     </div>
