--- a/BookSpace/src/main/resources/templates/books.html
+++ b/BookSpace/src/main/resources/templates/books.html
@@ -35,48 +35,59 @@
 
     <h3>Books List</h3>
 
-    <table style="width:80%" border="1"
-           class = "table table-striped table-responsive-md">
-        <thead>
-        <tr>
-            <th>Title</th>
-            <th>Genre</th>
-            <th>Apparition year</th>
+<!--    <table style="width:80%" border="1"-->
+<!--           class = "table table-striped table-responsive-md">-->
+<!--        <thead>-->
+<!--        <tr>-->
+<!--            <th>Title</th>-->
+<!--            <th>Genre</th>-->
+<!--            <th>Author</th>-->
+<!--            <th>Apparition year</th>-->
 
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="book:${booksList}">
-            <td th:text="${book.title}"></td>
-            <td th:text="${book.genre}"></td>
-            <td th:text="${book.year}"></td>
-            <td> <a th:href="@{/books/update-book-form/{id}(id=${book.id})}"
-                    class="btn btn-primary">Update</a>
-                <a th:href="@{/books/deleteBook/{id}(id=${book.id})}"
-                   class="btn btn-danger">Delete</a>
+<!--        </tr>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--        <tr th:each="book:${booksList}">-->
+<!--            <td th:text="${book.title}"></td>-->
+<!--            <td th:text="${book.genre}"></td>-->
+<!--            <td th:text="${book.author.firstName}"></td>-->
+<!--            <td th:text="${book.year}"></td>-->
+<!--            <td> <a th:href="@{/books/update-book-form/{id}(id=${book.id})}"-->
+<!--                    class="btn btn-primary">Update</a>-->
+<!--                <a th:href="@{/books/deleteBook/{id}(id=${book.id})}"-->
+<!--                   class="btn btn-danger">Delete</a>-->
 
-                <a th:href="@{/books/page/{id}(id=${book.id})}"
-                   class="btn btn-info">Info</a>
-            </td>
-
-<!--            <div class="panel-body">-->
-<!--                <div class="row">-->
-<!--                    <div class="col-md-12">-->
-<!--                        <p th:text="${book.details != null ? book.details.description:'CE'}">-->
-<!--                            Info-->
-<!--                        </p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-
-<!--            <td> <a th:href="@{/books/update-book-form/{id}(id=${book.id})}"><i class="fa-solid fa-pen"></a>-->
-<!--                <a th:href="@{/books/deleteBook/{id}(id=${book.id})}"><i class="fa-solid fa-trash"></a>-->
+<!--                <a th:href="@{/books/page/{id}(id=${book.id})}"-->
+<!--                   class="btn btn-info">Info</a>-->
 <!--            </td>-->
-        </tr>
 
 
-        </tbody>
-    </table>
+
+<!--        </tr>-->
+
+
+<!--        </tbody>-->
+<!--    </table>-->
+
+    <div class="card text-center" th:each="book:${booksList}">
+        <div class="card-header">
+            <td th:text="${book.author.firstName} + ' ' + ${book.author.lastName}"></td>
+        </div>
+        <div class="card-body">
+            <h5 th:text="${book.title}" class="card-title">Special title treatment</h5>
+            <p th:text="${book.genre}"  class="card-text"></p>
+            <a th:href="@{/books/update-book-form/{id}(id=${book.id})}"
+               class="btn btn-primary">Update</a>
+            <a th:href="@{/books/deleteBook/{id}(id=${book.id})}"
+               class="btn btn-danger">Delete</a>
+
+<!--            <a th:href="@{/books/page/{id}(id=${book.id})}"-->
+<!--               class="btn btn-info">Info</a>-->
+        </div>
+        <div class="card-footer text-muted" th:text="'Apparition Year: ' + ${book.year}">
+            2 days ago
+        </div>
+    </div>
     <a th:href="@{/books/add-book-form}" class="btn btn-info btn-sm mb-3" >Add Book</a>
 </div>
 </body>
