--- a/BookSpace/src/main/resources/templates/books.html
+++ b/BookSpace/src/main/resources/templates/books.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="ISO-8859-1">
+    <meta charset="UTF-8">
     <title>Books</title>
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -14,81 +14,64 @@
 </head>
 <body>
 
-
-<div class="container my-2" align="center">
-
+<div class="container my-2 text-center">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{'/authors'}">Authors <span class="sr-only" >(current)</span></a>
+                    <a class="nav-link" th:href="@{'/authors'}">Authors <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{'/books'}">Books <span class="sr-only" >(current)</span></a>
+                    <a class="nav-link" th:href="@{'/books'}">Books <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
-
         </div>
     </nav>
 
-    <h3>Books List</h3>
+<!--    <h3>Books List</h3>-->
 
-<!--    <table style="width:80%" border="1"-->
-<!--           class = "table table-striped table-responsive-md">-->
-<!--        <thead>-->
-<!--        <tr>-->
-<!--            <th>Title</th>-->
-<!--            <th>Genre</th>-->
-<!--            <th>Author</th>-->
-<!--            <th>Apparition year</th>-->
+<!--    <div class="card"  style="margin: 15px; font-family: Georgia;  font-weight: bold; text-transform: uppercase;">-->
+<!--        <h5 class="card-body">-->
+<!--           Book List-->
+<!--        </h5>-->
+<!--    </div>-->
 
-<!--        </tr>-->
-<!--        </thead>-->
-<!--        <tbody>-->
-<!--        <tr th:each="book:${booksList}">-->
-<!--            <td th:text="${book.title}"></td>-->
-<!--            <td th:text="${book.genre}"></td>-->
-<!--            <td th:text="${book.author.firstName}"></td>-->
-<!--            <td th:text="${book.year}"></td>-->
-<!--            <td> <a th:href="@{/books/update-book-form/{id}(id=${book.id})}"-->
-<!--                    class="btn btn-primary">Update</a>-->
-<!--                <a th:href="@{/books/deleteBook/{id}(id=${book.id})}"-->
-<!--                   class="btn btn-danger">Delete</a>-->
-
-<!--                <a th:href="@{/books/page/{id}(id=${book.id})}"-->
-<!--                   class="btn btn-info">Info</a>-->
-<!--            </td>-->
+        <h5 class="card"  style="margin: 20px; padding: 5px; font-family: Georgia;  font-weight: bold; text-transform: uppercase;">
+            Book List
+        </h5>
 
 
-
-<!--        </tr>-->
-
-
-<!--        </tbody>-->
-<!--    </table>-->
-
-    <div class="card text-center" th:each="book:${booksList}">
-        <div class="card-header">
-            <td th:text="${book.author.firstName} + ' ' + ${book.author.lastName}"></td>
-        </div>
-        <div class="card-body">
-            <h5 th:text="${book.title}" class="card-title">Special title treatment</h5>
-            <p th:text="${book.genre}"  class="card-text"></p>
-            <a th:href="@{/books/update-book-form/{id}(id=${book.id})}"
-               class="btn btn-primary">Update</a>
-            <a th:href="@{/books/deleteBook/{id}(id=${book.id})}"
-               class="btn btn-danger">Delete</a>
-
-<!--            <a th:href="@{/books/page/{id}(id=${book.id})}"-->
-<!--               class="btn btn-info">Info</a>-->
-        </div>
-        <div class="card-footer text-muted" th:text="'Apparition Year: ' + ${book.year}">
-            2 days ago
+    <div class="row justify-content-center">
+        <div class="col-md-4 mb-3" th:each="book:${booksList}">
+            <div class="card text-center" style="width: 18rem;">
+                <div class="card-header">
+                    <span th:text="${book.author.firstName} + ' ' + ${book.author.lastName}"></span>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${book.title}">Special title treatment</h5>
+                    <p class="card-text" th:text="${book.genre}"></p>
+                    <a th:href="@{/books/update-book-form/{id}(id=${book.id})}" class="btn btn-primary">Update</a>
+                    <a th:href="@{/books/deleteBook/{id}(id=${book.id})}" class="btn btn-danger">Delete</a>
+                    <a th:href="@{/books/page/{id}(id=${book.id})}" class="btn btn-info">Info</a>
+                </div>
+                <div class="card-footer text-muted" th:text="'Apparition Year: ' + ${book.year}">
+                    2 days ago
+                </div>
+                <div class="card-footer text-muted">
+                    <div class="card text-white bg-success" style="max-width: 10rem;">
+                        <div class="card-body p-2"> <!-- Adăugăm padding mai mic pentru a reduce spațiul interior -->
+                            <h5 class="card-title mb-0">Best seller</h5> <!-- Adăugăm mb-0 pentru a elimina spațiul între titlu și conținut -->
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <a th:href="@{/books/add-book-form}" class="btn btn-info btn-sm mb-3" >Add Book</a>
+
+    <a th:href="@{/books/add-book-form}" class="btn btn-info btn-sm mb-3">Add Book</a>
+
 </div>
+
 </body>
 </html>
