--- a/BookSpace/src/main/resources/templates/books.html
+++ b/BookSpace/src/main/resources/templates/books.html
@@ -60,8 +60,8 @@
                 </div>
                 <div class="card-footer text-muted">
                     <div class="card text-white bg-success" style="max-width: 10rem;">
-                        <div class="card-body p-2"> <!-- Adăugăm padding mai mic pentru a reduce spațiul interior -->
-                            <h5 class="card-title mb-0">Best seller</h5> <!-- Adăugăm mb-0 pentru a elimina spațiul între titlu și conținut -->
+                        <div class="card-body p-2">
+                            <h5 class="card-title mb-0">Best seller</h5>
                         </div>
                     </div>
                 </div>
