--- a/BookSpace/src/main/resources/templates/labels.html
+++ b/BookSpace/src/main/resources/templates/labels.html
@@ -27,7 +27,9 @@
     </div>
   </nav>
 
-  <h3>Book Labels List</h3>
+  <h5 class="card"  style="margin: 20px; padding: 5px; font-family: Georgia;  font-weight: bold; text-transform: uppercase;">
+    Book List
+  </h5>
 
   <div class="row justify-content-center">
     <div class="col-md-4 mb-3" th:each="label:${labelList}">
