--- a/BookSpace/src/main/resources/templates/authors.html
+++ b/BookSpace/src/main/resources/templates/authors.html
@@ -11,7 +11,6 @@
 <body>
 <div class="container my-2" align="center">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -20,8 +19,10 @@
         <li class="nav-item active">
           <a class="nav-link" th:href="@{'/books'}">Books <span class="sr-only" >(current)</span></a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" th:href="@{'/labels'}">Books <span class="sr-only" >(current)</span></a>
+        </li>
       </ul>
-
     </div>
   </nav>
   <h3>Author List</h3>
