--- a/BookSpace/src/main/resources/templates/update-book-form.html
+++ b/BookSpace/src/main/resources/templates/update-book-form.html
@@ -3,39 +3,43 @@
 <head>
     <meta charset="ISO-8859-1">
     <title>Authors Management System</title>
-
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <style>
+        .full-height {
+            height: 100vh;
+        }
+    </style>
 </head>
 <body>
-<div class="container my-2" align="center">
-    <h1>Authors Management System</h1>
-    <hr>
-    <h2>Update Author</h2>
-
-    <form action="#" th:action="@{/books/save}" th:object="${book}"
-          method="POST">
-
-        <!-- Add hidden form field to handle update -->
-        <input type="hidden" th:field="*{id}" />
-
-        <input type="text" th:field="*{title}" class="form-control mb-4 col-4">
-
-        <input type="text" th:field="*{genre}" class="form-control mb-4 col-4">
-
-        <!--    <label th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Error</label>-->
-        <input type="number" th:field="*{year}" class="form-control mb-4 col-4">
-
-        <select th:field="*{author}" class="form-control mb-4 col-4" >
-            <option value="">Select the author</option>
-            <option th:each="author : ${authorsAll}" th:value="${author.id}"  th:text="${author.firstName + ' ' + author.lastName}"></option>
-        </select>
-        <button type="submit" class="btn btn-info col-2"> Update Book</button>
-    </form>
-
-    <hr>
-
-    <a th:href = "@{/books}"> Back to Book List</a>
+<div class="container full-height d-flex align-items-center justify-content-center">
+    <div class="card p-4" style="max-width: 600px; width: 100%;">
+        <hr>
+        <h2 class="text-center">Update Book</h2>
+        <form action="#" th:action="@{/books/save}" th:object="${book}" method="POST">
+            <!-- Add hidden form field to handle update -->
+            <input type="hidden" th:field="*{id}" />
+            <div class="form-group">
+                <input type="text" th:field="*{title}" class="form-control mb-4">
+            </div>
+            <div class="form-group">
+                <input type="text" th:field="*{genre}" class="form-control mb-4">
+            </div>
+            <div class="form-group">
+                <input type="number" th:field="*{year}" class="form-control mb-4">
+            </div>
+            <div class="form-group">
+                <select th:field="*{author}" class="form-control mb-4">
+                    <option value="">Select the author</option>
+                    <option th:each="author : ${authorsAll}" th:value="${author.id}" th:text="${author.firstName + ' ' + author.lastName}"></option>
+                </select>
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn btn-info">Update Book</button>
+            </div>
+        </form>
+        <hr>
+    </div>
 </div>
 </body>
 </html>
