--- a/BookSpace/src/main/resources/templates/update-label-form.html
+++ b/BookSpace/src/main/resources/templates/update-label-form.html
@@ -7,39 +7,38 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous">
+    <style>
+        .full-height {
+            height: 100vh;
+        }
+    </style>
 </head>
 <body>
-<div class="container my-2" align="center">
-    <h1>Labels</h1>
-    <hr>
-    <h2>Save Label</h2>
-
-    <form action="#" th:action="@{/labels/save}" th:object="${label}"
-          method="POST">
-        <input type="text" th:field="*{text}" placeholder="Title" class="form-control mb-4 col-4">
-
-
-        <select th:field="*{colour}" class="form-control mb-4 col-4">
-            <option value="">Select the colour</option>
-            <option value="bg-primary">Blue</option>
-            <option value="bg-secondary">Grey</option>
-            <option value="bg-success">Green</option>
-            <option value="bg-danger">Red</option>
-            <option value="bg-warning">Yellow</option>
-            <option value="bg-info">Light blue</option>
-            <option value="bg-dark">Black</option>
-        </select>
-
-
-        <button type="submit" class="btn btn-info col-2">Update
-            Label</button>
-    </form>
-
-
-
-    <hr>
-
-    <a th:href="@{/labels}"> Back to Labels List</a>
+<div class="container full-height d-flex align-items-center justify-content-center">
+    <div class="card p-4" style="max-width: 600px; width: 100%;">
+        <h2 class="text-center">Save Label</h2>
+        <hr>
+        <form action="#" th:action="@{/labels/save}" th:object="${label}" method="POST">
+            <div class="form-group">
+                <input type="text" th:field="*{text}" placeholder="Title" class="form-control mb-4">
+            </div>
+            <div class="form-group">
+                <select th:field="*{colour}" class="form-control mb-4">
+                    <option value="">Select the colour</option>
+                    <option value="bg-primary">Blue</option>
+                    <option value="bg-secondary">Grey</option>
+                    <option value="bg-success">Green</option>
+                    <option value="bg-danger">Red</option>
+                    <option value="bg-warning">Yellow</option>
+                    <option value="bg-info">Light blue</option>
+                    <option value="bg-dark">Black</option>
+                </select>
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn btn-info">Update Label</button>
+            </div>
+        </form>
+    </div>
 </div>
 </body>
 </html>
