--- a/BookSpace/src/main/resources/templates/update-label-form.html
+++ b/BookSpace/src/main/resources/templates/update-label-form.html
@@ -30,12 +30,14 @@
                     <option value="bg-success">Green</option>
                     <option value="bg-danger">Red</option>
                     <option value="bg-warning">Yellow</option>
-                    <option value="bg-info">Light blue</option>
                     <option value="bg-dark">Black</option>
                 </select>
             </div>
             <div class="text-center">
                 <button type="submit" class="btn btn-info">Update Label</button>
+            </div>
+            <div class="text-center">
+                <a th:href="@{/labels}" class="btn btn-link"> Back to Labels List</a> <!-- Centered link -->
             </div>
         </form>
     </div>
