--- a/BookSpace/src/main/resources/templates/add-label-form.html
+++ b/BookSpace/src/main/resources/templates/add-label-form.html
@@ -14,6 +14,7 @@
     </style>
 </head>
 <body>
+
 <div class="container full-height d-flex align-items-center justify-content-center">
     <div class="card p-4" style="max-width: 600px; width: 100%;">
         <hr>
@@ -30,12 +31,14 @@
                     <option value="bg-success">Green</option>
                     <option value="bg-danger">Red</option>
                     <option value="bg-warning">Yellow</option>
-                    <option value="bg-info">Light blue</option>
                     <option value="bg-dark">Black</option>
                 </select>
             </div>
             <div class="text-center">
                 <button type="submit" class="btn btn-info">Save Label</button>
+            </div>
+            <div class="text-center">
+                <a th:href="@{/labels}" class="btn btn-link"> Back to Labels List</a> <!-- Centered link -->
             </div>
         </form>
         <hr>
