--- a/BookSpace/src/main/resources/templates/authors.html
+++ b/BookSpace/src/main/resources/templates/authors.html
@@ -20,12 +20,14 @@
           <a class="nav-link" th:href="@{'/books'}">Books <span class="sr-only" >(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" th:href="@{'/labels'}">Books <span class="sr-only" >(current)</span></a>
+          <a class="nav-link" th:href="@{'/labels'}">Labels <span class="sr-only" >(current)</span></a>
         </li>
       </ul>
     </div>
   </nav>
-  <h3>Author List</h3>
+  <h5 class="card"  style="margin: 20px; padding: 5px; font-family: Georgia;  font-weight: bold; text-transform: uppercase;">
+    Authors List
+  </h5>
 
   <table style="width:80%" border="1"
          class = "table table-striped table-responsive-md">
