--- a/BookSpace/src/main/resources/templates/books.html
+++ b/BookSpace/src/main/resources/templates/books.html
@@ -20,10 +20,13 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{'/authors'}">Authors <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" th:href="@{'/authors'}">Authors <span class="sr-only" >(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{'/books'}">Books <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" th:href="@{'/books'}">Books <span class="sr-only" >(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{'/labels'}">Labels <span class="sr-only" >(current)</span></a>
                 </li>
             </ul>
         </div>
@@ -58,13 +61,13 @@
                 <div class="card-footer text-muted" th:text="'Apparition Year: ' + ${book.year}">
                     2 days ago
                 </div>
-                <div class="card-footer text-muted">
-                    <div class="card text-white bg-success" style="max-width: 10rem;">
-                        <div class="card-body p-2">
-                            <h5 class="card-title mb-0">Best seller</h5>
-                        </div>
-                    </div>
-                </div>
+<!--                <div class="card-footer text-muted">-->
+<!--                    <div class="card text-white bg-success" style="max-width: 10rem;">-->
+<!--                        <div class="card-body p-2">-->
+<!--                            <h5 class="card-title mb-0">Best seller</h5>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
         </div>
     </div>
