--- a/BookSpace/src/main/resources/templates/update-author-form.html
+++ b/BookSpace/src/main/resources/templates/update-author-form.html
@@ -31,6 +31,9 @@
       <div class="text-center">
         <button type="submit" class="btn btn-info">Update Author</button>
       </div>
+      <div class="text-center">
+        <a th:href="@{/authors}" class="btn btn-link"> Back to Authors List</a> <!-- Centered link -->
+      </div>
     </form>
     <hr>
   </div>
