--- a/BookSpace/src/main/resources/templates/update-book-form.html
+++ b/BookSpace/src/main/resources/templates/update-book-form.html
@@ -37,6 +37,9 @@
             <div class="text-center">
                 <button type="submit" class="btn btn-info">Update Book</button>
             </div>
+            <div class="text-center">
+                <a th:href="@{/books}" class="btn btn-link"> Back to Books List</a> <!-- Centered link -->
+            </div>
         </form>
         <hr>
     </div>
