Author birth year

--- a/BookSpace/src/main/resources/templates/add-author-form.html
+++ b/BookSpace/src/main/resources/templates/add-author-form.html
@@ -27,7 +27,7 @@
         <input type="text" th:field="*{lastName}" placeholder="Last name" class="form-control mb-4">
       </div>
       <div class="form-group">
-        <input type="number" th:field="*{age}" placeholder="Age" class="form-control mb-4">
+        <input type="number" th:field="*{birthYear}" placeholder="Birth Year" class="form-control mb-4">
       </div>
       <div class="form-group">
         <input type="text" th:field="*{authorDetails.description}" placeholder="Description" class="form-control mb-4">
