--- a/BookSpace/src/main/resources/templates/author-info.html
+++ b/BookSpace/src/main/resources/templates/author-info.html
@@ -42,7 +42,7 @@
     <div class="card text-white bg-info mb-3" style="max-width: 100rem;">
         <div class="card-header"><strong>First name:</strong> <span th:text="${author.firstName}"></span></div>
         <div class="card-header"><strong>Last name:</strong> <span th:text="${author.lastName}"></span></div>
-        <div class="card-header"><strong>Birth Year:</strong> <span th:text="${author.age}"></span></div>
+        <div class="card-header"><strong>Birth Year:</strong> <span th:text="${author.birthYear}"></span></div>
 
         <div class="card-body">
             <h5 class="card-title">Author Description:</h5>
