--- a/BookSpace/src/main/resources/templates/update-author-form.html
+++ b/BookSpace/src/main/resources/templates/update-author-form.html
@@ -26,7 +26,7 @@
         <input type="text" th:field="*{lastName}" class="form-control mb-4">
       </div>
       <div class="form-group">
-        <input type="text" th:field="*{age}" class="form-control mb-4">
+        <input type="text" th:field="*{birthYear}" class="form-control mb-4">
       </div>
       <div class="text-center">
         <button type="submit" class="btn btn-info">Update Author</button>
