--- a/BookSpace/src/main/resources/templates/add-book-form.html
+++ b/BookSpace/src/main/resources/templates/add-book-form.html
@@ -14,31 +14,51 @@
     </style>
 </head>
 <body>
+<!--<div class="container full-height d-flex align-items-center justify-content-center">-->
+<!--    <div class="card p-4" style="max-width: 600px; width: 100%;">-->
+<!--        <hr>-->
+<!--        <h2 class="text-center">Save Book</h2>-->
+<!--        <form action="#" th:action="@{/books/save}" th:object="${book}" method="POST">-->
+<!--            <div class="form-group">-->
+<!--                <input type="text" th:field="*{title}" placeholder="Title" class="form-control mb-4">-->
+<!--            </div>-->
+<!--            <div class="form-group">-->
+<!--                <input type="text" th:field="*{genre}" placeholder="Genre" class="form-control mb-4">-->
+<!--            </div>-->
+<!--            <div class="form-group">-->
+<!--                <input type="number" th:field="*{year}" placeholder="Apparition year" class="form-control mb-4">-->
+<!--            </div>-->
+<!--            <div class="form-group">-->
+<!--                <select th:field="*{author}" class="form-control mb-4">-->
+<!--                    <option value="">Select the author</option>-->
+<!--                    <option th:each="author : ${authorsAll}" th:value="${author.id}" th:text="${author.firstName + ' ' + author.lastName}"></option>-->
+<!--                </select>-->
+<!--            </div>-->
+<!--            <div class="text-center">-->
+<!--                <button type="submit" class="btn btn-info">Save Book</button>-->
+<!--            </div>-->
+<!--            <div class="text-center">-->
+<!--                <a th:href="@{/books}" class="btn btn-link"> Back to Books List</a> &lt;!&ndash; Centered link &ndash;&gt;-->
+<!--            </div>-->
+<!--        </form>-->
+<!--        <hr>-->
+<!--    </div>-->
+<!--</div>-->
+
 <div class="container full-height d-flex align-items-center justify-content-center">
     <div class="card p-4" style="max-width: 600px; width: 100%;">
         <hr>
-        <h2 class="text-center">Save Book</h2>
-        <form action="#" th:action="@{/books/save}" th:object="${book}" method="POST">
+        <h2 class="text-center">Sort Authors</h2>
+        <form th:action="@{/sortAuthors}" method="get">
             <div class="form-group">
-                <input type="text" th:field="*{title}" placeholder="Title" class="form-control mb-4">
-            </div>
-            <div class="form-group">
-                <input type="text" th:field="*{genre}" placeholder="Genre" class="form-control mb-4">
-            </div>
-            <div class="form-group">
-                <input type="number" th:field="*{year}" placeholder="Apparition year" class="form-control mb-4">
-            </div>
-            <div class="form-group">
-                <select th:field="*{author}" class="form-control mb-4">
-                    <option value="">Select the author</option>
-                    <option th:each="author : ${authorsAll}" th:value="${author.id}" th:text="${author.firstName + ' ' + author.lastName}"></option>
+                <label for="sort-criteria">Choose sorting criteria:</label>
+                <select id="sort-criteria" name="sort" class="form-control mb-4">
+                    <option value="alphabetic">Alphabetical</option>
+                    <option value="birth-year">By birth year</option>
                 </select>
             </div>
             <div class="text-center">
-                <button type="submit" class="btn btn-info">Save Book</button>
-            </div>
-            <div class="text-center">
-                <a th:href="@{/books}" class="btn btn-link"> Back to Books List</a> <!-- Centered link -->
+                <button type="submit" class="btn btn-primary">Sort</button>
             </div>
         </form>
         <hr>
