--- a/BookSpace/src/main/resources/templates/books.html
+++ b/BookSpace/src/main/resources/templates/books.html
@@ -72,7 +72,31 @@
         </div>
     </div>
 
+
+
     <a th:href="@{/books/add-book-form}" class="btn btn-info btn-sm mb-3">Add Book</a>
+
+    <div class="container full-height d-flex align-items-center justify-content-center">
+        <div class="card p-4" style="max-width: 600px; width: 100%;">
+            <hr>
+            <h2 class="text-center">Sort Books</h2>
+            <form th:action="@{/books/sortBooks}" method="get">
+                <div class="form-group">
+                    <label for="sort-criteria">Choose sorting criteria:</label>
+                    <select id="sort-criteria" name="sort" class="form-control mb-4">
+                        <option value="title">Title</option>
+                        <option value="genre">Genre</option>
+                        <option value="year">Year</option>
+                        <option value="authorName">Author Name</option>
+                    </select>
+                </div>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary">Sort</button>
+                </div>
+            </form>
+            <hr>
+        </div>
+    </div>
 
 </div>
 
