--- a/BookSpace/src/main/resources/templates/update-author-form.html
+++ b/BookSpace/src/main/resources/templates/update-author-form.html
@@ -17,16 +17,19 @@
     <hr>
     <h2 class="text-center">Update Author</h2>
     <form action="#" th:action="@{/authors/save}" th:object="${author}" method="POST">
-      <!-- Add hidden form field to handle update -->
       <input type="hidden" th:field="*{id}" />
       <div class="form-group">
         <input type="text" th:field="*{firstName}" class="form-control mb-4">
+        <small class="text-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></small>
       </div>
       <div class="form-group">
         <input type="text" th:field="*{lastName}" class="form-control mb-4">
+        <small class="text-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></small>
       </div>
       <div class="form-group">
         <input type="text" th:field="*{birthYear}" class="form-control mb-4">
+        <small class="text-danger" th:if="${#fields.hasErrors('birthYear')}" th:errors="*{birthYear}"></small>
+
       </div>
       <div class="text-center">
         <button type="submit" class="btn btn-info">Update Author</button>
